--- a/baseCSS/src/scss/index.scss
+++ b/baseCSS/src/scss/index.scss
@@ -19,6 +19,7 @@
 // Website Styles
 @import "styles/header";
 @import "styles/footer";
+@import "styles/main";
 
 // Helpers
 @import "~@getbase/base/scss/horizontal-spacers";
