--- a/baseCSS/src/scss/styles/_header.scss
+++ b/baseCSS/src/scss/styles/_header.scss
@@ -1,2 +1,32 @@
 // Header
 
+.header {
+    background-color: black;
+    color: white;
+    padding: 10px;
+}
+.headerText{
+    font-size: 42px;
+    margin-left: 25px;
+}
+.serachField {
+    height: 30px;
+}
+.searchButton {
+    height: 40px;
+}
+.menuBar{
+    background-image: linear-gradient(#666, white);
+}
+.menuButtons {
+    background-color: transparent;
+    background: transparent;
+    border: none;
+    color: black;
+    padding: 10px;
+    font-size: 16px;
+    
+}
+.menuButtons:hover {
+    background-color: gray;
+ }
